cluster/atlassian/bitbucket/bespin/bitbucket-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitbucket-srv
  namespace: atlassian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitbucket
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bitbucket
        track: production
    spec:
      nodeSelector:
        workerClass: infra
      containers:
      - name: bitbucket-srv
        image: atlassian/bitbucket-server:7.4.0-jdk11
        volumeMounts:
        - name: bitbucket-var
          mountPath: /var/atlassian/application-data/bitbucket
        #jdbc-driver-mysql configMap mounting is not needed. mysql driver will be stored in bitbucket-var
        #- name: conf-backup
        #  mountPath: /var/lib/backups

      volumes:
        #- name: conf-backup
        #  nfs:
        #    path: /mnt/jabbapool1/AtlassianBackup/bitbucket
        #    server: d-stor01.infra.kan.cengn.ca
        - name: bitbucket-var
          persistentVolumeClaim:
            claimName: bitbucket-var-pvc
